--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | Social links profile</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <base target="_blank">
 </head>
 <body>
   <div class="container">
@@ -27,18 +22,14 @@
       <div class="bio">"Front-end developer and avid reader."</div>
 
       <div class="links">
-        <div>GitHub</div>
-        <div>Frontend Mentor</div>
-        <div>LinkedIn</div>
-        <div>Twitter</div>
-        <div>Instagram</div>
+        <div><a href="#">GitHub</a></div>
+        <div><a href="#">Frontend Mentor</a></div>
+        <div><a href="#">LinkedIn</a></div>
+        <div><a href="#">Twitter</a></div>
+        <div><a href="#">Instagram</a></div>
       </div>
     </div>
-  </div>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. Coded by <a href="#">Abiodun Longe</a>.</div>
   </div>
 </body>
 </html>
